# ComObjectSample

./: CMakeLists.txt  regcom.reg
ComApp/: CMakeLists.txt  main.cpp
ComDll/: CMakeLists.txt  ComDll.def  dll_main.cpp
ComIdl/: Arithmetics.idl  CMakeLists.txt  ComProxy.def
ComObject/: CMakeLists.txt  arithmetics_factory.cpp  arithmetics_impl.cpp  stdafx.h
ComObject/inc/: arithmetics_factory.h  arithmetics_impl.h
ComServer/: CMakeLists.txt  main.cpp
